# textadventure

./: README.md  pyproject.toml
.github/workflow/: pypi.yml
.github/workflows/: pypi.yml
TextAdventures/: README.md  pyproject.toml
TextAdventures/TextAdventures.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
TextAdventures/textadventures/src/: __main__.py  input.py  output.py
src/textadventure/: __init__.py  input.py  menu.py  timing.py
textadventure/: LICENSE.md  README.md  pyproject.toml
textadventure/src/textadventure/: __init__.py  __main__.py  input.py  timing.py
textadventure/src/textadventure.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
