[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textadventure"
version = "0.0.8"
authors = [
  { name="Matthew James", email="mattdestroyerpro@gmail.com" }
]
description = "A small package to make creating your own text adventure games easy!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "getkey"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Matt-DESTROYER/textadventure"
Issues = "https://github.com/Matt-DESTROYER/textadventure/issues"
